--- a/launch_schedule.JSON
+++ b/launch_schedule.JSON
@@ -4,7 +4,7 @@
     "launches":[
         {
             "launchName":"Expedition 63 Launch",
-            "launchDate":"April 9, 2020",
+            "launchDate":"2020-4-9",
             "launchTime":"4:04 AM (Eastern time)",
             "launchDescription":"NASA astronaut Chris Cassidy and Russian space agency Roscosmos cosmonauts Anatoly Ivanishin and Ivan Vagner launch aboard a Soyuz spacecraft to the International Space Station. This will be the third spaceflight for Cassidy.",
             "launchImageURL":"https://pixabay.com/photos/kitty-cat-kitten-pet-animal-cute-551554/",
@@ -12,7 +12,7 @@
         },
         {
             "launchName":"Commercial Crew SpaceX Demo-2 Flight Test (Crewed)",
-            "launchDate":"May 2020",
+            "launchDate":"2020-5",
             "launchTime":"TBD",
             "launchDescription":"SpaceX’s Crew Dragon Demo-2 mission is a flight test with crew, prior to certification of systems by NASA for operational missions to the International Space Station. NASA astronauts Bob Behnken and Doug Hurley will fly on Demo-2.",
             "launchImageURL":"https://pixabay.com/photos/kitty-cat-kitten-pet-animal-cute-551554/",
@@ -20,7 +20,7 @@
         },
         {
             "launchName":"Mars Perseverance Rover",
-            "launchDate":"July 2020",
+            "launchDate":"2020-7",
             "launchTime":"TBD",
             "launchDescription":"Our Perseverance rover will search for signs of habitable conditions on Mars in the ancient past and for signs of past microbial life itself. The rover will launch on a United Launch Alliance Atlas V rocket from Space Launch Complex 41 at Cape Canaveral Air Force Station.",
             "launchImageURL":"https://pixabay.com/photos/kitty-cat-kitten-pet-animal-cute-551554/",
