--- a/launch_schedule.JSON
+++ b/launch_schedule.JSON
@@ -7,7 +7,7 @@
             "launchDate":"2020-4-9",
             "launchTime":"4:04 AM (Eastern time)",
             "launchDescription":"NASA astronaut Chris Cassidy and Russian space agency Roscosmos cosmonauts Anatoly Ivanishin and Ivan Vagner launch aboard a Soyuz spacecraft to the International Space Station. This will be the third spaceflight for Cassidy.",
-            "launchImageURL":"https://pixabay.com/photos/kitty-cat-kitten-pet-animal-cute-551554/",
+            "launchImageURL":"",
             "integer":101
         },
         {
@@ -15,7 +15,7 @@
             "launchDate":"2020-5",
             "launchTime":"TBD",
             "launchDescription":"SpaceX’s Crew Dragon Demo-2 mission is a flight test with crew, prior to certification of systems by NASA for operational missions to the International Space Station. NASA astronauts Bob Behnken and Doug Hurley will fly on Demo-2.",
-            "launchImageURL":"https://pixabay.com/photos/kitty-cat-kitten-pet-animal-cute-551554/",
+            "launchImageURL":"",
             "integer":200
         },
         {
@@ -23,7 +23,15 @@
             "launchDate":"2020-7",
             "launchTime":"TBD",
             "launchDescription":"Our Perseverance rover will search for signs of habitable conditions on Mars in the ancient past and for signs of past microbial life itself. The rover will launch on a United Launch Alliance Atlas V rocket from Space Launch Complex 41 at Cape Canaveral Air Force Station.",
-            "launchImageURL":"https://pixabay.com/photos/kitty-cat-kitten-pet-animal-cute-551554/",
+            "launchImageURL":"",
+            "integer":200
+        }
+                {
+            "launchName":"Test layout",
+            "launchDate":"2020-3",
+            "launchTime":"TBD",
+            "launchDescription":"Our Perseverance rover will search for signs of habitable conditions on Mars in the ancient past and for signs of past microbial life itself. The rover will launch on a United Launch Alliance Atlas V rocket from Space Launch Complex 41 at Cape Canaveral Air Force Station. Lorem ipsum dolor sig amet lorem ipsum dolor lorem ipsum dolor lorem ipsum dolor the quick brown fox jumped over the lazy rabbit dog cat fish animal long text paragraph here.",
+            "launchImageURL":"",
             "integer":200
         }
     ]
