--- a/launch_schedule.JSON
+++ b/launch_schedule.JSON
@@ -14,7 +14,7 @@
             "launchName":"GPS III SV03 - Columbus",
             "launchDate":"2020-4-29",
             "launchTime":"TBD",
-            "launchDescription":"GPS-IIIA (Global Positioning System) is the first evolution stage of the third generation of the GPS satellites. It consists of the first ten (known as "tranche") of GPS III satellites.",
+            "launchDescription":"GPS-IIIA (Global Positioning System) is the first evolution stage of the third generation of the GPS satellites. It consists of the first ten (known as tranche) of GPS III satellites.",
             "launchImageURL":"https://raw.githubusercontent.com/nickdvlpr/Files/master/perseverance_rover.jpg",
             "integer":101
         },
