--- a/launch_schedule.JSON
+++ b/launch_schedule.JSON
@@ -11,7 +11,7 @@
             "integer":101
         },
         {
-            "launchName":"Commercial Crew SpaceX Demo 2 Flight Test",
+            "launchName":"NASA and SpaceX launch the first astronauts from the US since 2011.",
             "launchDate":"2020-5-27",
             "launchTime":"4:32 PM (EDT)",
             "launchDescription":"A new era of human spaceflight is set to begin as American astronauts once again launch on an American rocket from American soil to the International Space Station as part of NASA's Commercial Crew Program. As the final flight test for SpaceX, this mission will validate the company’s crew transportation system, including the launch pad, rocket, spacecraft, and operational capabilities. This also will be the first time NASA astronauts will test the spacecraft systems in orbit.",
