--- a/launch_schedule.JSON
+++ b/launch_schedule.JSON
@@ -3,7 +3,7 @@
     "totalLaunches":500,
     "launches":[
         {
-            "launchName":"GPS (3rd Generation)",
+            "launchName":"GPS update will be launched by SpaceX",
             "launchDate":"2020-6",
             "launchTime":"TBD",
             "launchDescription":"GPS-IIIA (Global Positioning System) is the first evolution stage of the third generation of the GPS satellites. It consists of the first ten (known as tranche) of GPS III satellites.",
