--- a/launch_schedule.JSON
+++ b/launch_schedule.JSON
@@ -4,8 +4,8 @@
     "launches":[
         {
             "launchName":"USSF-7 by ULA",
-            "launchDate":"2020-5-16",
-            "launchTime":"TBD",
+            "launchDate":"2020-5-17",
+            "launchTime":"9:14 AM (EDT)",
             "launchDescription":"This mission will launch the Boeing X-37B spaceplane into Earth orbit for the US Space Force.",
             "launchImageURL":"https://raw.githubusercontent.com/nickdvlpr/Files/master/perseverance_rover.jpg",
             "integer":200
