--- a/package.json
+++ b/package.json
@@ -7,6 +7,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/ajh3/sn-theme-minimal.git"
+    "url": "git://github.com/nickdvlpr/Files.git"
   }
 }
